--- a/tutorial/1-rendering.html
+++ b/tutorial/1-rendering.html
@@ -101,7 +101,10 @@ var Message = Backbone.Model.extend({
      * Putting it into the initialize function let's us be sure that
      * all models that are created will have event listeners on them.
      */
-    this.on(YOUR CODE HERE);
+    this.on('change', function(e){
+      // /console.log(this);
+      renderSomethingOnThePage(this.get('message'));
+    });
     /* It is your turn to write the event handler.
      *
      * Make an event listener that will listen for a `change` in this model's
@@ -138,9 +141,12 @@ var Message = Backbone.Model.extend({
 
 // Let's try it out: 'instantiate' an instance of the class defined above:
 var myNewMessage = new Message();
-
 // ...and then make a change on that model to see it render
+myNewMessage.on('change', (e) => myNewMessage.alertThisMessage())
+setTimeout(() => {
 myNewMessage.set({message: 'someMessage'});
+}, 2000);
+// myNewMessage.alertThisMessage();
 
 
 /* Once the model is rendering on the `change` event, move on to step 3!
